Fix for lower resolution mobiles

--- a/src/DrinkCard.css
+++ b/src/DrinkCard.css
@@ -3,7 +3,9 @@
 }
 
 .drink__card--image {
-  width: 60%;
+  width: 29vh;
+  max-height: 29vh;
+
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
@@ -22,7 +24,7 @@
 .drink__card--top-section h2 {
   text-transform: uppercase;
   margin: 10px 0 5px 0;
-  font-size: 7.5vw;
+  font-size: 4vh;
 }
 
 .drink__card--ingredients-section {
@@ -32,7 +34,7 @@
 .drink__card--ingredients-section h3 {
   color: white;
   width: 100%;
-  font-size: 5vw;
+  font-size: 3vh;
   margin: 10px 0 5px 0;
   text-align: center;
 }
@@ -66,7 +68,7 @@
 }
 
 .drink__card--ingredients-section ul li {
-  font-size: 4vw;
+  font-size: 2.4vh;
   padding: 5px 5px;
   list-style-type: '👉';
   padding-inline-start: 1ch;
@@ -74,8 +76,8 @@
 
 .drink__card--ratings-section {
   display: flex;
-  justify-content: space-around;
-  font-size: 5vw;
+  justify-content: space-evenly;
+  font-size: 2.8vh;
   margin-top: 20px;
   margin-bottom: 5px;
   font-weight: 700;
@@ -86,20 +88,20 @@
   margin-right: 3px;
   margin-left: 3px;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 2.8vh;
+  height: 2.8vh;
   padding: 4px;
   display: inline-block;
   background: #ffc83d;
   text-align: center;
-  font: 20px Arial, sans-serif;
+  font: 2.8vh Arial, sans-serif;
 }
 
 .drink__card--ratings-section .drink__card--ratings-section--max {
   display: inline-block;
   font-weight: 400;
   letter-spacing: 1px;
-  font-size: 14px;
+  font-size: 2.8vh;
 }
 
 .animated {
@@ -144,7 +146,7 @@
   width: 100%;
   bottom: 2%;
   text-align: center;
-  font-size: 5vw;
+  font-size: 2.8vh;
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -154,7 +156,7 @@
   text-align: center;
   margin: 10px 20px;
   padding-left: 6px;
-  font-size: 4vw;
+  font-size: 2.4vh;
   display: flex;
   flex-direction: column;
   align-items: center;
